syntax = "proto3";

// Support for nullable values.
import "google/protobuf/wrappers.proto";

option java_package = "com.bytecause.nautichart";
option java_multiple_files = true;

message RecentlyUsedPoiMarkerIcon {
  string drawableResourceName = 1;
}

message RecentlyUsedPoiMarkerIconList {
  repeated RecentlyUsedPoiMarkerIcon iconDrawableResourceName = 1;
}

message RecentlySearchedPlace {
  int64 placeId = 1;
  double latitude = 2;
  double longitude = 3;
  string name = 4;
  string displayName = 5;
  string type = 6;
  int64 timeStamp = 7;
}

message RecentlySearchedPlaceList {
  repeated RecentlySearchedPlace place = 1;
}

message CustomOnlineTileSource {
  string name = 1;
  string url = 2;
  string tileFileFormat = 3;
  string schema = 4;
  int32 minZoom = 5;
  int32 maxZoom = 6;
  int32 tileSize = 7;
}

message CustomOnlineTileSourceList {
  repeated CustomOnlineTileSource onlineTileSource = 1;
}

message CustomOfflineTileSource {
  string name = 1;
  int32 minZoom = 3;
  int32 maxZoom = 4;
  int32 tileSize = 5;
}

message CustomOfflineTileSourceList {
  repeated CustomOfflineTileSource offlineTileSource = 1;
}